# AlphaForge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alphaforge/: __init__.py  alphaforge_native.pyi
alphaforge/backtesting/: __init__.py  engine.py  ledger.py
alphaforge/data/: __init__.py  loaders.py  quality.py  schemas.py  signal_foundry.py  synthetic.py
alphaforge/evaluation/: __init__.py  capacity.py  metrics.py  overfitting.py  readiness.py
alphaforge/execution/: __init__.py  costs.py  models.py  native.py  orderbook_py.py
alphaforge/features/: __init__.py  pipeline.py  technical.py
alphaforge/labels/: __init__.py  labels.py
alphaforge/models/: __init__.py  base.py  baselines.py  ensemble.py  regime.py  registry.py  sklearn_models.py  temporal.py  torch_models.py
alphaforge/paper/: __init__.py  controls.py  simulator.py
alphaforge/portfolio/: __init__.py  construction.py
alphaforge/reporting/: __init__.py  reports.py
alphaforge/research/: __init__.py  signal_foundry.py
alphaforge/risk/: __init__.py  metrics.py
alphaforge/signals/: __init__.py  signals.py
alphaforge/training/: __init__.py  purged_cv.py  walk_forward.py
alphaforge/utils/: __init__.py  common.py
alphaforge/visualization/: __init__.py  plots.py
apps/: __init__.py  api.py  dashboard.py
configs/: backtest.yaml  data.yaml  features.yaml  models.yaml  portfolio.yaml  risk.yaml  signal_foundry_research.yaml
cpp/: CMakeLists.txt
cpp/benchmarks/: bench_main.cpp
cpp/include/alphaforge/: order_book.hpp
cpp/src/: bindings.cpp
data/: README.md
docs/: architecture.md  backtesting.md  data_design.md  execution_engine.md  feature_design.md  limitations.md  linkedin_post.md  model_card.md  modeling.md  portfolio_summary.md  resume_bullets.md  risk_management.md  signal_foundry.md
docs/adr/: 0001-temporal-integrity.md  0002-neural-temporal-alpha.md
notebooks/: 01_data_exploration.ipynb  02_feature_research.ipynb  03_model_comparison.ipynb  04_backtest_analysis.ipynb  README.md
scripts/: _common.py  bench_orderbook.py  build_features.py  build_native.py  download_data.py  evaluate_model.py  generate_report.py  optimize_portfolio.py  run_backtest.py  run_signal_foundry_research.py  run_walk_forward.py  simulate_paper_trading.py  train_model.py
tests/: conftest.py  test_backtest_risk.py  test_capacity.py  test_data_features_labels.py  test_execution_models.py  test_leakage.py  test_ledger.py  test_orderbook.py  test_paper_controls.py  test_paper_simulator.py  test_purged_cv.py  test_readiness.py  test_regime_hmm.py  test_risk_upgrades.py  test_signal_foundry_data.py  test_signal_foundry_research.py  test_signals_reporting.py  test_temporal_backtest.py  test_temporal_model.py  test_visualization.py  test_walk_forward.py
tests/fixtures/signal_foundry_v1/: current.json
tests/fixtures/signal_foundry_v1/68cb928cde713032f18fe065bbfb835dc25fd014b8dedfb20d79bafb3b0fefea/: manifest.json
tests/fixtures/signal_foundry_v1/68cb928cde713032f18fe065bbfb835dc25fd014b8dedfb20d79bafb3b0fefea/prices/year=2023/: part-00000.parquet
tests/fixtures/signal_foundry_v1/68cb928cde713032f18fe065bbfb835dc25fd014b8dedfb20d79bafb3b0fefea/prices/year=2024/: part-00000.parquet
