[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge"
version = "0.2.1"
description = "Regime-aware, multi-horizon ML alpha research platform with leakage-safe walk-forward validation and realistic backtesting."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Saif Gangaram" }]
keywords = [
    "quantitative-finance",
    "machine-learning",
    "backtesting",
    "alpha-research",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.40", "pyarrow>=14.0"]
ml = ["lightgbm>=4.0", "xgboost>=2.0"]
torch = ["torch>=2.1"]
native = ["pybind11>=2.11"]  # C++ execution core bindings (see cpp/ and `make native`)
app = ["streamlit>=1.30", "fastapi>=0.109", "uvicorn>=0.27", "plotly>=5.18", "pydantic>=2.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pybind11>=2.11",
    "build>=1.2",
]
all = ["alphaforge[data,ml,torch,native,app,dev]"]

[project.urls]
Repository = "https://github.com/srgangaram-swe/AlphaForge"

[tool.setuptools.packages.find]
include = ["alphaforge*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "SIM108", "B905"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
    "network: tests requiring network access (skipped in CI)",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
